Dynamic Body Management

--- a/game/GAT315-Physics.vcxproj
+++ b/game/GAT315-Physics.vcxproj
@@ -275,6 +275,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Body.h" />
+    <ClInclude Include="Integrator.h" />
+    <ClInclude Include="mathf.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
