--- a/game/GAT315-Physics.vcxproj
+++ b/game/GAT315-Physics.vcxproj
@@ -265,6 +265,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Body.c" />
     <ClCompile Include="src\main.c" />
     <ClCompile Include="World.c" />
   </ItemGroup>
