--- a/game/GAT315-Physics.vcxproj.filters
+++ b/game/GAT315-Physics.vcxproj.filters
@@ -15,6 +15,9 @@
     <ClCompile Include="World.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Body.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="World.h">
