--- a/game/GAT315-Physics.vcxproj
+++ b/game/GAT315-Physics.vcxproj
@@ -266,6 +266,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Body.c" />
+    <ClCompile Include="editor.c" />
+    <ClCompile Include="Force.c" />
+    <ClCompile Include="render.c" />
     <ClCompile Include="src\main.c" />
     <ClCompile Include="World.c" />
   </ItemGroup>
@@ -276,8 +279,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Body.h" />
+    <ClInclude Include="editor.h" />
+    <ClInclude Include="Force.h" />
     <ClInclude Include="Integrator.h" />
     <ClInclude Include="mathf.h" />
+    <ClInclude Include="render.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
