--- a/game/GAT315-Physics.vcxproj
+++ b/game/GAT315-Physics.vcxproj
@@ -266,6 +266,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Body.c" />
+    <ClCompile Include="Collision.c" />
+    <ClCompile Include="contact.c" />
     <ClCompile Include="editor.c" />
     <ClCompile Include="Force.c" />
     <ClCompile Include="render.c" />
@@ -279,6 +281,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Body.h" />
+    <ClInclude Include="Collision.h" />
+    <ClInclude Include="contact.h" />
     <ClInclude Include="editor.h" />
     <ClInclude Include="Force.h" />
     <ClInclude Include="Integrator.h" />
