--- a/game/GAT315-Physics.vcxproj.filters
+++ b/game/GAT315-Physics.vcxproj.filters
@@ -31,6 +31,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Collision.c" />
+    <ClCompile Include="Spring.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="World.h">
@@ -58,6 +59,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Collision.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Spring.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
